--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoContratos/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoContratos/index.html
@@ -86,7 +86,7 @@
                                                                 {% endif %}
                                                             </td>
                                                             <td class="text-center">
-                                                                {% if perms.GestionDocumental.cargar_contrato_consecutivocontrato %}
+                                                                {% if  perms.GestionDocumental.add_consecutivocontrato %}
                                                                     <a class="fad fa-2x fa-file-upload" href="javascript:abrirModalCargar('{% url 'GestionDocumental:consecutivo-contratos-cargar' consecutivo.id%}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Cargar Contrato"></a>
                                                                 {% endif %}
                                                                 {% if consecutivo.ruta_archivo and perms.GestionDocumental.ver_contratro_consecutivocontrato %}
