--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoContratos/_modal_crear_editar_consecutivo.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoContratos/_modal_crear_editar_consecutivo.html
@@ -1,7 +1,7 @@
 {% load eva_tags %}
 {% load static %}
  {% if editar %}
-<form action= "{% url 'GestionDocumental:consecutivo-contratos-editar' contrato_actual%}" id="consecutivo_contrato_form_editar" method="post" class="needs-validation" novalidate>
+<form action= "{% url 'GestionDocumental:consecutivo-contratos-editar' consecutivo.id %}" id="consecutivo_contrato_form_editar" method="post" class="needs-validation" novalidate>
 {% else %}
 <form action= "{% url 'GestionDocumental:consecutivo-contratos-crear' %}" id="consecutivo_contrato_form" method="post" class="needs-validation" novalidate>
 {% endif %}
@@ -21,33 +21,33 @@
                     <div class="form-group">
                         <input id="extra_tipos_contrato" value="{{ extra_tipos_contrato }}" style="display: none">
                         <div class="col-md-12">
-                            {% select_tag tipo_contratos 'tipo_contrato' 'Seleccione un tipo de contrato'  value=tipo_contrato_actual texto_label="Tipo de contrato" required="" mensaje_validacion='Por favor seleccione un tipo de contrato'  %}
+                            {% select_tag tipo_contratos 'tipo_contrato' 'Seleccione un tipo de contrato'  value=consecutivo.tipo_contrato_id texto_label="Tipo de contrato" required="" mensaje_validacion='Por favor seleccione un tipo de contrato'  %}
                         </div>
                     </div>
                     <div class="form-group">
                         <div id="colaborador_mostrar_id" class="col-md-12">
-                            {% select_tag colaboradores 'colaborador' 'Seleccione un colaborador' value=colaborador_actual texto_label="Colaborador" required="" mensaje_validacion='Por favor seleccione un colaborador' %}
+                            {% select_tag colaboradores 'colaborador' 'Seleccione un colaborador' value=consecutivo.usuario_id texto_label="Colaborador" required="" mensaje_validacion='Por favor seleccione un colaborador' %}
                         </div>
                     </div>
                     <div class="form-group" >
                         <div id=tercero_mostrar_id style="display: none" class="col-md-12">
-                            {% select_tag terceros 'tercero' 'Seleccione un tercero' texto_label="Tercero"  value=tercero_actual mensaje_validacion='Por favor seleccione un tercero' %}
+                            {% select_tag terceros 'tercero' 'Seleccione un tercero' texto_label="Tercero"  value=consecutivo.tercero_id mensaje_validacion='Por favor seleccione un tercero' %}
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-md-12">
-                            {% input_date_tag 'fecha_inicio' 'Fecha de inicio' placeholder="Seleccione una fecha de inicio" value=fecha_inicial required="" autocomplete="off" mensaje_validacion='Por favor seleccione una fecha de inicio.' %}
+                            {% input_date_tag 'fecha_inicio' 'Fecha de inicio' placeholder="Seleccione una fecha de inicio" value=consecutivo.fecha_inicio required="" autocomplete="off" mensaje_validacion='Por favor seleccione una fecha de inicio.' %}
                         </div>
                     </div>
                     <div class="form-group">
                         <div id="fecha_final_mostrar" class="col-md-12">
-                            {% input_date_tag 'fecha_final' 'Fecha Final' placeholder="Seleccione una fecha final" value=fecha_final required="" autocomplete="off" mensaje_validacion='Por favor seleccione una fecha final.' %}
+                            {% input_date_tag 'fecha_final' 'Fecha Final' placeholder="Seleccione una fecha final" value=consecutivo.fecha_final required="" autocomplete="off" mensaje_validacion='Por favor seleccione una fecha final.' %}
                         </div>
                     </div>
                     {% if editar %}
                         <div class="form-group">
                             <div id="motivo" class="col-md-12">
-                                {% input_textarea_tag 'motivo' 'Motivo' placeholder="Digite Motivo" value=motivo|default_if_none:"" required="" mensaje_validacion='Por favor digite el motivo.' %}
+                                {% input_textarea_tag 'motivo' 'Motivo' placeholder="Digite Motivo" value=consecutivo.justificacion|default_if_none:"" required="" mensaje_validacion='Por favor digite el motivo.' %}
                             </div>
                         </div>
                     {% endif %}
