EVA-200 feat: En el modal de editar un consecutivo de contrato se muestra en el título el código  del consecutivo que se esta editando.

--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoContratos/_modal_crear_editar_consecutivo.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoContratos/_modal_crear_editar_consecutivo.html
@@ -10,7 +10,7 @@
         <div class="modal-content">
             <div class="modal-header p-b-0">
                 <h4 class="modal-title">
-                     {% if editar %}{{ "Editar" }}{% else %}{{ "Crear" }}{% endif %} consecutivos de Contrato
+                     {% if editar %}Editar consecutivo de contrato: {{ consecutivo.codigo }}{% else %}Crear consecutivos de Contrato{% endif %}
                 </h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true"><i class="fal fa-times"></i></span>
