--- a/EVA/templates/EVA/_common/base.html
+++ b/EVA/templates/EVA/_common/base.html
@@ -171,6 +171,7 @@
         <script src="{% static 'Notificaciones/js/cargarNotificaciones.js' %}"></script>
         <script src="{% static 'Notificaciones/js/accionesNotificacion.js' %}"></script>
         <script src="{% static 'Notificaciones/js/datosToken.js' %}"></script>
+        <script src="{% static 'EVA/Plantilla/js/custom/funcionesGenerales.js' %}"></script>
 
        {% block scripts %}
        {% endblock %}
