EVA-202 refactor: Se hace  un refactor de la forma de copiar al portapapeles el consecutivo del contrato.
Falta probar si en producción funciona sin problemas.

--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoContratos/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoContratos/index.html
@@ -63,7 +63,7 @@
                                                     {% for consecutivo in consecutivos %}
                                                         <tr>
                                                             <td><span id="copiar_{{ consecutivo.id }}">{{ consecutivo.codigo }}</span>
-                                                                <span><a class="fad fa-copy" href="javascript:void(0);"  onclick="fcopiarElemento({{ consecutivo.id }})" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Copiar"></a></span>
+                                                                <span><a class="fad fa-copy" href="javascript:void(0);"  onclick="copiarAPortapapeles('{{ consecutivo.codigo }}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Copiar"></a></span>
                                                             </td>
                                                             <td>{% if consecutivo.usuario %}
                                                                     {{ consecutivo.usuario.get_full_name }}
