EVA-203 fix: Se corrige problema con el calendario del formulario. - Faltaba agregar las librerias de js y de bootstrap para date-picker. - Se elimina el contenedor para modal con el id = crear (se usa para consecutivo de contrato).

--- a/GestionDocumental/templates/GestionDocumental/ConsecutivosReuniones/modal_crear_editar_reuniones.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivosReuniones/modal_crear_editar_reuniones.html
@@ -21,7 +21,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-12">
-                        {% input_date_tag 'fecha_reunion' 'Fecha de Reunión' placeholder="Seleccione una fecha" required="" autocomplete="off" mensaje_validacion='Por favor seleccione una fecha.' invalido=errores.fecha_reunion %}
+                        {% input_date_tag 'fecha' 'Fecha de Reunión' placeholder="Seleccione una fecha" required="" autocomplete="off" mensaje_validacion='Por favor seleccione una fecha.' invalido=errores.fecha_reunion %}
                     </div>
                 </div>
                 <div class="form-group">
