EVA-207 refactor: se modifico el nombre de la columna justificación a Motivo Editar/Anular

--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoOficios/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoOficios/index.html
@@ -54,7 +54,7 @@
                                                         <th>Detalle</th>
                                                         <th>Destinatario</th>
                                                         <th>Usuario</th>
-                                                        <th>Justificación</th>
+                                                        <th>Motivo Editar/Anular</th>
                                                         <th>Estado</th>
                                                         <th>Acción</th>
                                                     </tr>
